Added JWT Token

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOption": {
+  "Audience": "sayat@sayat.com",
+  "Issuer": "sayat@sayat.com",
+  "AccessTokenExpiration": 10,
+  "SecurityKey": "mysupersecretkeymysupersecretkey"
+  }, 
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
