--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "TokenOption": {
+  "TokenOptions": {
   "Audience": "sayat@sayat.com",
   "Issuer": "sayat@sayat.com",
   "AccessTokenExpiration": 10,
